--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <link href="assets/bootstrap-5/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/bootstrap-icons-1.11.3/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="assets/owl/owl.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo.ico">
 </head>
 
 <body>
